--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div  id="note" class="detail">
                 <p>Note: Please check your personal details before submit.</p>
                 <div id="btn">
-                    <button>Submit</button>
+              <input type="submit" value="submit">
                 </div>
                 
             </div>
