--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
            <h3>Candidate Login</h3>
        </div>
        <div id="user-login">
+        <form id="login-form" action="">
            <div class="id-pass">
                <label for="username" >username (Registration Number) <span style="color: red;">*</span></label>
                <input type="text" placeholder="Registration Number">
@@ -66,6 +67,7 @@
            <div id="register">
                <p>New User ?</p> <br>  <h4 id="click1" >Register Now</h4>
            </div>
+        </form>
        </div>
        </div>
   </div>   
@@ -104,33 +106,34 @@
              <p>One Time Registration</p>
         </div>
         <div id="full-information">
+            <form id="Registration-Form" action="">
             <div id="personal-details">
                 <p>One Time Registration</p>
                 <h3>Personal Details</h3>
             </div>
             <div id="name" class="detail">
                 <label for="">1. First Name<span style="color: red;">*</span></label>
-                <input type="text">
+                <input required type="text">
             </div>
             <div class="detail">
                 <label for="">2. Last Name<span style="color: red;">*</span></label>
-                <input type="text">
+                <input required type="text">
             </div>
             <div class="detail">
                 <label for="">3. Phone No.<span style="color: red;">*</span></label>
-                <input  type="number">
+                <input  required type="number">
             </div>
             <div class="detail">
                 <label for="">4. E-mail<span style="color: red;">*</span></label>
-                <input type="email">
+                <input required type="email">
             </div>
             <div class="detail">
                 <label for="D.O.B">5. Date of Birth (DD-MM-YYYY)<span style="color: red;">*</span></label>
-                <input type="date">
+                <input required type="date">
             </div>
             <div id="gender" class="detail">
                 <label for="gender">6. Gender<span style="color: red;">*</span></label>
-                <select name="gender" id="">
+                <select required name="gender" id="">
                     <option value="" disabled selected>select</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
@@ -148,16 +151,16 @@
                 </select>
                 <p>Type if ID and Id Number to be provided.</p>
                 <label for="">a. Identification Card Number<span style="color: red;">*</span></label>
-                <input type="text">
+                <input required type="text">
             </div>
             <div  id="note" class="detail">
                 <p>Note: Please check your personal details before submit.</p>
                 <div id="btn">
-              <input type="submit" value="submit">
+              <input type="submit" value="submit" id="submit">
                 </div>
                 
             </div>
-
+            </form>
         </div>
    </div>
 
