--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <form id="login-form" action="">
            <div class="id-pass">
                <label for="username" >username (Registration Number) <span style="color: red;">*</span></label>
-               <input type="text" placeholder="Registration Number">
+               <input required type="text" placeholder="Registration Number">
                
            </div>
            <div id="pass" class="id-pass">
                <label for="password">Password<span style="color: red;">*</span></label>
-               <input id="password" type="password" placeholder="Password">
+               <input required id="password" type="password" placeholder="Password">
                
                <a href="">Forgot Password</a>
            </div>
