--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img id="backgroundImage" src="background4.png" alt="">
+    <!-- <img id="backgroundImage" src="background4.png" alt=""> -->
   <div id="homePage">
        <div id="first">
            <p>Feedback | www.meravote.in</p>
