--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
            </div>
            <div id="pass" class="id-pass">
                <label for="password">Password<span style="color: red;">*</span></label>
-               <input id="password" required type="password" placeholder="Password">
+               <input id="login-password" required type="password" placeholder="Password">
                
                <a href="">Forgot Password</a>
            </div>
