--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
+    
+    <!-- <link rel="stylesheet" href="style1.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"/>
-<script type="module" src="./register.js" defer></script>
+<script type="module" src="./register.js" ></script> -->
     <title>votting.in</title>
+    <script type="module" src="./login.js" defer></script>
     
 </head>
 <body>
-    <!-- <img id="backgroundImage" src="background4.png" alt=""> -->
+    <!-- <img id="backgroundImage" src="background4.png" alt="">
   <div id="homePage">
        <div id="first">
            <p>Feedback | www.meravote.in</p>
@@ -154,7 +156,7 @@
             <div id="id" class="detail">
                 <label for="identi-card">8. Type of Identification Card<span style="color: red;">*</span></label>
                 <select required name="Select" id="rCard" >
-                    <!-- <optgroup label="hlo"></optgroup> -->
+                     <optgroup label="hlo"></optgroup> 
                     <option value=" " disabled selected>Select</option>
                     <option value="Pan Card" >Pan Card</option>
                     <option value="adhar card">Adhar Card</option>
@@ -176,6 +178,13 @@
    </div>
 
  
-   <script src="script1.js"></script>
+   <script src="script1.js"></script> -->
+<form action="">
+    <input id="l-email" type="email">
+    <input id="l-text" type="text">
+    <input id="l-password" type="password">
+    <input type="submit" value="login" id="login-btn">
+</form>
+<script src="./script1.js"></script>
 </body>
 </html>
